--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 {{>header}}
 <div class="container">
-    <center><h1>Algunos De Mis Pintores favoritos </h1></center>
+    <center><h2>Pintores Mas Reconcidos</h2></center>
     {{#if pintores}}
         <table class="table table-dark table-hover">
             <thead>
